dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_after_remote_reset_returns_connection_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] DEBUG poll_remote_budget received messages binding_id=1 status=Open msg_count=1
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=Open next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=1 status=Shutdown next_offset=0 inflight_bytes=0 remote_max_data=0
