dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_empty_buffer_no_fin_returns_zero_without_frames.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=1 status=Open next_offset=0 inflight_bytes=0 remote_max_data=4611686018427387903
0:00:00.000000000 [main] DEBUG Sent FIN binding_id=1
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
