dc/s2n-quic-dc/src/snapshots/stream__writer__tests__write_msg_fin_only_on_last_chunk_of_last_segment.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] TRACE m#tx.msg.segment_size=339968
0:00:00.000000000 [main] TRACE m#tx.msg.chunks_per_segment=256
0:00:00.000000000 [main] TRACE m#tx.msg.segment_size=1328
0:00:00.000000000 [main] TRACE m#tx.msg.chunks_per_segment=1
0:00:00.000000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=1 status=FinSent next_offset=341296 inflight_bytes=341296 remote_max_data=4611686018427387903
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
